schema and application.yml complete